@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-06T16:26:32Z",
-  "count" : 2,
+  "timestamp" : "2022-06-20T01:44:02Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
