@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-19T16:23:14Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-06-20T01:44:02Z",
+  "count" : 9,
+  "count_minmax" : [ 1, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 1, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
