@@ -1,22 +1,15 @@
 {
-  "timestamp" : "2022-06-19T16:23:14Z",
-  "count_outdated" : 2162,
-  "uniques_outdated" : 436,
-  "count" : 2194,
-  "uniques" : 457,
+  "timestamp" : "2022-06-20T01:44:02Z",
+  "count_outdated" : 2164,
+  "uniques_outdated" : 437,
+  "count" : 2201,
+  "uniques" : 459,
   "clones" : [
     {
-      "timestamp": "2022-06-05T00:00:00Z",
+      "timestamp": "2022-06-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 9,
+      "count_minmax": [ 1, 9 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ]
     }
   ]
 }
