@@ -1,16 +1,11 @@
 {
-  "count": 32,
-  "uniques": 7,
+  "count": 37,
+  "uniques": 8,
   "clones": [
     {
-      "timestamp": "2022-06-05T00:00:00Z",
+      "timestamp": "2022-06-06T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 9,
+      "uniques": 4
     }
   ]
 }
